// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportContractModal.vue Should let the user import a verified mainnet contract 1`] = `
<div role="dialog" class="v-dialog__container">
  <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
    <transition-stub name="dialog-transition" appear="true">
      <div class="v-dialog v-dialog--active" style="transform-origin: center center; max-width: 600px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Import a third-party contract</div>
          <div class="v-card__text">
            <!---->
            <div role="alert" class="v-alert v-sheet theme--dark success">Contact imported successfully at address <a class="white--text" href="/address/0x123">0x123</a></div>
            <!---->
            <div>
              Enter an address of a contract deployed on the Ethereum mainnet <b>and</b> verified on Etherscan.<br>
              Then, contract details will be pulled using the Etherscan API, and it will be added to this page.<br>
              To be able to use it, your workspace needs to be connected to a mainnet fork.<br>
              If it is not, the contract will still be imported but calls will fail.<br></div>
            <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-text-field__slot"><label for="contractAddress" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Address*</label><input required="required" id="contractAddress" type="text"></div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" class="v-btn v-btn--flat v-btn--loading v-btn--text theme--light v-size--default primary--text" id="importContract"><span class="v-btn__content">Import</span><span class="v-btn__loader"><div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-circular v-progress-circular--indeterminate" style="height: 23px; width: 23px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="21.904761904761905 21.904761904761905 43.80952380952381 43.80952380952381" style="transform: rotate(0deg);"><circle fill="transparent" cx="43.80952380952381" cy="43.80952380952381" r="20" stroke-width="3.8095238095238093" stroke-dasharray="125.664" stroke-dashoffset="125.66370614359172px" class="v-progress-circular__overlay"></circle></svg><div class="v-progress-circular__info"></div></div></span></button>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`ImportContractModal.vue Should not warn the user if he is on a premium plan and has already 10 contracts 1`] = `
<div role="dialog" class="v-dialog__container">
  <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
    <transition-stub name="dialog-transition" appear="true">
      <div class="v-dialog v-dialog--active" style="transform-origin: center center; max-width: 600px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Import a third-party contract</div>
          <div class="v-card__text">
            <!---->
            <!---->
            <div role="alert" class="v-alert v-sheet theme--dark error">
              <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-alert theme--dark"></i>
                <div class="v-alert__content"> Contract not found</div>
              </div>
            </div>
            <div>
              Enter an address of a contract deployed on the Ethereum mainnet <b>and</b> verified on Etherscan.<br>
              Then, contract details will be pulled using the Etherscan API, and it will be added to this page.<br>
              To be able to use it, your workspace needs to be connected to a mainnet fork.<br>
              If it is not, the contract will still be imported but calls will fail.<br></div>
            <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-text-field__slot"><label for="contractAddress" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Address*</label><input required="required" id="contractAddress" type="text"></div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" class="v-btn v-btn--flat v-btn--loading v-btn--text theme--light v-size--default primary--text" id="importContract"><span class="v-btn__content">Import</span><span class="v-btn__loader"><div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-circular v-progress-circular--indeterminate" style="height: 23px; width: 23px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="21.904761904761905 21.904761904761905 43.80952380952381 43.80952380952381" style="transform: rotate(0deg);"><circle fill="transparent" cx="43.80952380952381" cy="43.80952380952381" r="20" stroke-width="3.8095238095238093" stroke-dasharray="125.664" stroke-dashoffset="125.66370614359172px" class="v-progress-circular__overlay"></circle></svg><div class="v-progress-circular__info"></div></div></span></button>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`ImportContractModal.vue Should warn the user if he is on a free plan and has already 10 contracts 1`] = `
<div role="dialog" class="v-dialog__container">
  <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
    <transition-stub name="dialog-transition" appear="true">
      <div class="v-dialog v-dialog--active" style="transform-origin: center center; max-width: 600px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Import a third-party contract</div>
          <div class="v-card__text">
            <div role="alert" class="v-alert v-sheet theme--dark v-alert--text error--text">
              <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-alert theme--dark error--text"></i>
                <div class="v-alert__content">Free plan users are limited to 10 synced contracts. Remove some contracts or <a>upgrade</a> to the Premium plan for more.</div>
              </div>
            </div>
            <!---->
            <!---->
            <div>
              Enter an address of a contract deployed on the Ethereum mainnet <b>and</b> verified on Etherscan.<br>
              Then, contract details will be pulled using the Etherscan API, and it will be added to this page.<br>
              To be able to use it, your workspace needs to be connected to a mainnet fork.<br>
              If it is not, the contract will still be imported but calls will fail.<br></div>
            <div class="v-input v-input--is-disabled theme--light v-text-field">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-text-field__slot"><label for="contractAddress" class="v-label v-label--is-disabled theme--light" style="left: 0px; position: absolute;">Address*</label><input required="required" disabled="disabled" id="contractAddress" type="text"></div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--flat v-btn--text theme--light v-size--default" id="importContract"><span class="v-btn__content">Import</span></button>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`ImportContractModal.vue Should warn the user if the contract has not been found 1`] = `
<div role="dialog" class="v-dialog__container">
  <div role="document" tabindex="0" class="v-dialog__content v-dialog__content--active" style="z-index: 202;">
    <transition-stub name="dialog-transition" appear="true">
      <div class="v-dialog v-dialog--active" style="transform-origin: center center; max-width: 600px;">
        <div class="v-card v-sheet theme--light">
          <div class="v-card__title headline">Import a third-party contract</div>
          <div class="v-card__text">
            <!---->
            <!---->
            <div role="alert" class="v-alert v-sheet theme--dark error">
              <div class="v-alert__wrapper"><i aria-hidden="true" class="v-icon notranslate v-alert__icon mdi mdi-alert theme--dark"></i>
                <div class="v-alert__content"> Contract not found</div>
              </div>
            </div>
            <div>
              Enter an address of a contract deployed on the Ethereum mainnet <b>and</b> verified on Etherscan.<br>
              Then, contract details will be pulled using the Etherscan API, and it will be added to this page.<br>
              To be able to use it, your workspace needs to be connected to a mainnet fork.<br>
              If it is not, the contract will still be imported but calls will fail.<br></div>
            <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <div class="v-text-field__slot"><label for="contractAddress" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Address*</label><input required="required" id="contractAddress" type="text"></div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="v-card__actions">
            <div class="spacer"></div> <button type="button" class="v-btn v-btn--flat v-btn--text theme--light v-size--default primary--text"><span class="v-btn__content">Close</span></button> <button type="button" class="v-btn v-btn--flat v-btn--loading v-btn--text theme--light v-size--default primary--text" id="importContract"><span class="v-btn__content">Import</span><span class="v-btn__loader"><div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-circular v-progress-circular--indeterminate" style="height: 23px; width: 23px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="21.904761904761905 21.904761904761905 43.80952380952381 43.80952380952381" style="transform: rotate(0deg);"><circle fill="transparent" cx="43.80952380952381" cy="43.80952380952381" r="20" stroke-width="3.8095238095238093" stroke-dasharray="125.664" stroke-dashoffset="125.66370614359172px" class="v-progress-circular__overlay"></circle></svg><div class="v-progress-circular__info"></div></div></span></button>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;
